# ClawLite

./: .gitignore  CMakeLists.txt  README.md  benchmark.csv  show_tree.py
benchmarks/: skill_prompt_benchmark.cpp
include/core/: event_bus.h  types.h
include/llm/: harness.h  llm_client.h  prompt_builder.h  runtime_plan.h  tool_executor.h
include/memory/: chunker.h  compaction.h  context_engine.h  embedding.h  memory_store.h  search_manager.h  session_store.h
include/skill/: skill_filter.h  skill_loader.h  skill_parser.h  skill_registry.h
scripts/: plot_5_benchmarks.py  plot_skill_prompt_benchmark.py
skills/calculator/: SKILL.md
skills/file-reader/: SKILL.md
skills/hello/: SKILL.md
src/: main.cpp
src/core/: event_bus.cpp  types.cpp
src/llm/: harness.cpp  llm_client.cpp  prompt_builder.cpp  runtime_plan.cpp  tool_executor.cpp
src/memory/: IMPLEMENTATION_PLAN.md  chunker.cpp  compaction.cpp  context_engine.cpp  embedding.cpp  memory_store.cpp  search_manager.cpp  session_store.cpp
src/skill/: skill_filter.cpp  skill_loader.cpp  skill_parser.cpp  skill_registry.cpp
tests/: test_chunker.cpp  test_helpers.h  test_llm.cpp  test_main.cpp  test_memory_store.cpp  test_prompt_builder.cpp  test_remote_embedding.cpp  test_search.cpp  test_session_store.cpp  test_skill_parser.cpp  test_skill_registry.cpp
